--- a/RPG Tutorial/Assembly-CSharp.csproj
+++ b/RPG Tutorial/Assembly-CSharp.csproj
@@ -83,7 +83,11 @@
     <Compile Include="Assets\scripts\Managers\FloatingTextManager\FloatingTextManager.cs" />
     <Compile Include="Assets\scripts\Managers\GameManager\DontDestroy.cs" />
     <Compile Include="Assets\scripts\Managers\GameManager\GameManager.cs" />
-    <Compile Include="Assets\scripts\Menus\CharacterMenu.cs" />
+    <Compile Include="Assets\scripts\Managers\MenuManager\MenuManager.cs" />
+    <Compile Include="Assets\scripts\Managers\MenuManager\Menus\CharacterMenu.cs" />
+    <Compile Include="Assets\scripts\Managers\MenuManager\Menus\ControlsMenu.cs" />
+    <Compile Include="Assets\scripts\Managers\MenuManager\Menus\OptionsMenu.cs" />
+    <Compile Include="Assets\scripts\Managers\MenuManager\Menus\StartMenu.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.22f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
